목록 페이지-> 상세 페이지

--- a/src/main/resources/templates/articles/index.mustache
+++ b/src/main/resources/templates/articles/index.mustache
@@ -11,7 +11,7 @@
     {{#articleList}} <!--모델에 등록되어 있는 데이터를 출력-->
     <tr>
         <th>{{id}}</th>
-        <td>{{title}}</td>
+        <td><a href="/articles/{{id}}">{{title}}</a></td>  <!--제목에 상세보기 링크 연결-->
         <td>{{content}}</td>
     </tr>
     {{/articleList}}
