--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -17,5 +17,6 @@
     {{/article}}
     </tbody>
 </table>
-<a href="/articles">Go to Article List</a>
+<a href="/articles/{{article.id}}/edit" class="btn btn-primary">수정</a>
+<a href="/articles">목록</a>
 {{>layouts/footer}}
