--- a/src/main/resources/templates/articles/edit.mustache
+++ b/src/main/resources/templates/articles/edit.mustache
@@ -1,6 +1,8 @@
 {{>layouts/header}}
 
-<form class="container" action="" method="post"><!--부트스트랩 CSS 코드 적용-->
+<!--action:폼 데이터를 어디로 보낼지 지정, method: 어떻게 보낼지 방식 지정-->
+<form class="container" action="/articles/update" method="post">
+    <input name="id" type="hidden" value="{{id}}"> <!--id도 전송-->
     <div class="mb-3">
         <label class="form-label">제목</label>
         <input type="text" class="form-control" name="title" value="{{article.title}}">
