--- a/src/main/resources/templates/members/show.mustache
+++ b/src/main/resources/templates/members/show.mustache
@@ -17,6 +17,6 @@
     {{/member}}
     </tbody>
 </table>
-
-<a href="/members">Go to member list</a>
+<a href="/members/{{member.id}}/edit" class="btn btn-primary">수정</a>
+<a href="/members">목록</a>
 {{>layouts/footer}}
