--- a/src/main/resources/templates/members/index.mustache
+++ b/src/main/resources/templates/members/index.mustache
@@ -1,4 +1,5 @@
 {{>layouts/header}}
+<!--목록 페이지-->
 <table class="table">
     <thead>
     <tr>
@@ -18,5 +19,5 @@
     </tbody>
 </table>
 
-<a href="/members/new">회원가입</a>
+<a href="/members/new">회원가입</a> <!--회원 가입 페이지로 이동-->
 {{>layouts/footer}}
