--- a/src/main/resources/templates/members/show.mustache
+++ b/src/main/resources/templates/members/show.mustache
@@ -1,4 +1,5 @@
 {{>layouts/header}}
+<!--상세 목록 페이지 -->
 <table class="table">
     <thead>
     <tr>
@@ -17,6 +18,6 @@
     {{/member}}
     </tbody>
 </table>
-<a href="/members/{{member.id}}/edit" class="btn btn-primary">수정</a>
-<a href="/members">목록</a>
+<a href="/members/{{member.id}}/edit" class="btn btn-primary">수정</a> <!--수정 버튼을 누르면 수정 페이지로 이동-->
+<a href="/members">목록</a> <!--목폭 페이지로 이동-->
 {{>layouts/footer}}
