삭제 기능 추가

--- a/src/main/resources/templates/members/edit.mustache
+++ b/src/main/resources/templates/members/edit.mustache
@@ -11,8 +11,9 @@
         <label class="form-label">비밀번호</label>
         <input type="password" class="form-control" name="password" value="{{password}}">
     </div>
-    <button type="submit" class="btn btn-primary">수정</button>
-    <a href="/members">뒤로</a>
+    <button type="submit" class="btn btn-primary">수정하기</button>
+
+    <a href="/members">목록으로</a>
 </form>
 {{/member}}
 
