--- a/src/main/resources/templates/members/show.mustache
+++ b/src/main/resources/templates/members/show.mustache
@@ -18,6 +18,7 @@
     {{/member}}
     </tbody>
 </table>
-<a href="/members/{{member.id}}/edit" class="btn btn-primary">수정</a> <!--수정 버튼을 누르면 수정 페이지로 이동-->
+<a href="/members/{{member.id}}/edit" class="btn btn-primary">수정하기</a> <!--수정 페이지로 이동-->
+<a href="/members/{{member.id}}/delete" class="btn btn-primary">삭제하기</a><!--삭제 페이지로 이동-->
 <a href="/members">목록</a> <!--목폭 페이지로 이동-->
 {{>layouts/footer}}
