삭제 기능 추가, 한글화

--- a/src/main/resources/templates/articles/edit.mustache
+++ b/src/main/resources/templates/articles/edit.mustache
@@ -1,5 +1,5 @@
 {{>layouts/header}}
-
+<!--수정 페이지-->
 <!--action:폼 데이터를 어디로 보낼지 지정, method: 어떻게 보낼지 방식 지정-->
 <form class="container" action="/articles/update" method="post">
     <input name="id" type="hidden" value="{{id}}"> <!--id도 전송-->
