--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -1,4 +1,5 @@
 {{>layouts/header}}
+<!--상세 페이지-->
 <table class="table">
     <thead>
     <tr>
@@ -18,5 +19,6 @@
     </tbody>
 </table>
 <a href="/articles/{{article.id}}/edit" class="btn btn-primary">수정</a>
+<a href="/articles/{{article.id}}/delete" class="btn btn-primary">삭제</a>
 <a href="/articles">목록</a>
 {{>layouts/footer}}
