--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -1,5 +1,5 @@
 {{>layouts/header}}
-
+<!--글 쓰기 페이지-->
 <form class="container" action="/articles/create" method="post"><!--부트스트랩 CSS 코드 적용-->
     <div class="mb-3">
         <label class="form-label">제목</label>
