--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -21,4 +21,6 @@
 <a href="/articles/{{article.id}}/edit" class="btn btn-primary">수정</a>
 <a href="/articles/{{article.id}}/delete" class="btn btn-primary">삭제</a>
 <a href="/articles">목록</a>
+
+{{>comments/_comments}}<!--상세 페이지에 댓글 뷰 파일 삽입-->
 {{>layouts/footer}}
