--- a/src/main/resources/templates/comments/_list.mustache
+++ b/src/main/resources/templates/comments/_list.mustache
@@ -118,6 +118,21 @@
                 //삭제 댓글 id 가져오기
                 const commentId = commentDeleteBtn.getAttribute("data-comment-id");
                 console.log(`삭제 버튼이 클릭: ${commentId}번 댓글`);
+                //삭제 REST API 호출
+                const url = `/api/comments/${commentId}`;
+                fetch(url, {
+                    method: "DELETE"
+                }).then(response => {
+                    //댓글 삭제 실패 처리
+                    if(!response.ok) {
+                        alert("댓글 삭제 실패..!");
+                        return;
+                    }
+                    //삭제 성공 시 메시지 창 띄우기
+                    const msg = `${commentId}번 댓글을 삭제했습니다.`;
+                    alert(msg);
+                    window.location.reload();
+                });
             });
         });
     }
